--- a/part3/NotesBackend/.env
+++ b/part3/NotesBackend/.env
@@ -1,1 +1,2 @@
 MONGODB_URI="mongodb+srv://blitzb4707912:KOQ8RinaXYkCW9NV@cluster0.qwotl.mongodb.net/noteApp?retryWrites=true&w=majority&appName=Cluster0"
+PORT=3001
